--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>This is my forth repo with Git Branch Command</h1>
     <p>Git Branch Command</p>
+    <img src="nati.jfif">
 </body>
 </html>
